[package]
name = "tron-launcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tronctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
nix = { version = "0.30", features = ["process", "signal", "user"] }
sysinfo = "0.37"
md5 = "0.7"
tar = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
indicatif = "0.18"
chrono = "0.4"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"
